se añadio un punto al src de la imagen del avatar a ver si asi cargan las imagenes de la web

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="main01">
     <header class="header">
       <div class="container-header">
-        <img class="avatar" src="/images/perfil1.png" alt="avatar" title="avatar" />
+        <img class="avatar" src="./images/perfil1.png" alt="avatar" title="avatar" />
         <p class="descriptionHeader">Hola, soy<br>
            <span>Miguel Eduardo Ochoa,</span> <br>
           Desarrollador Frontend <br>
