se agrego puntos a todos lo src de las imagenes de la web

--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
            y la tecnología.
         </p>
       </div>
-
       <footer class="footer">
         <div  class="icons-header-container">
 
@@ -84,9 +83,7 @@
         </div>
         <p class="copyright rigth-margin bottom-margin color-Footer"> &copy; Miguel E. Ochoa</p>
         <p class="Design rigth-margin bottom-margin color-Footer" >Design: Miguel Eduardo Ochoa</p>
-
-      </footer> 
-          
+      </footer>          
     </header>
   </div>
 
@@ -110,14 +107,14 @@
           <div class="contain-article">
             <img src="./images/nigelparadise.png" alt="nigelparadise" class="job-image" title="nigelparadise">
             <p>Landing Page con ReactJs y Sass</p>
-            <p>Este es un proyecto de landding Page hecho con React con distintos componentes, donde se resalta el reproductor de audio contruido a partir de Hooks, el componente Retail de la derecha recibe la imagen de logo por medio de props y por último el header con algunas animaciones. Tambien tiene Responsive hecho con Sass. </p>
+            <p>Este es un proyecto de landding Page hecho con React con distintos componentes, donde se resalta el reproductor de audio construido a partir de Hooks, el componente Retail de la derecha recibe la imagen de logo por medio de props y por último el header con algunas animaciones. Tambien tiene Responsive hecho con Sass. </p>
             <a href="https://github.com/MiguelE8a/landingparadise" class="goToGitHub" target="_blank">Ver más en GitHub</a>
           </div>
         </article>
 
         <article class="article-wrap">
           <div class="contain-article">
-            <img src="/images/calculator.png" alt="calculator" class="job-image" title="calculator">
+            <img src="./images/calculator.png" alt="calculator" class="job-image" title="calculator">
             <p>Calculadora</p>
             <p>Este es un pequeño proyecto hecho para mis inicios con logica de programacion, implementando HTML, CSS y Javascript nativos.</p>
           </div>
@@ -126,7 +123,7 @@
 
         <article class="article-wrap">
           <div class="contain-article">
-            <img src="/images/portafolio.png" alt="portafolio" class="job-image" title="portafolio">
+            <img src="./images/portafolio.png" alt="portafolio" class="job-image" title="portafolio">
             <p>Portafolio</p>
             <p>Aquí presento mi portafolio como parte de los proyectos que he venido desempeñando,
               este esta construido con marcado HTML, estilos con Sass aplicando animaciones, transformaciones y transiciones, además un poco de JavaScript
@@ -137,7 +134,7 @@
         
         <article class="article-wrap">
           <div class="contain-article">
-            <img src="/images/tictactoe.png" alt="tictactoe" class="job-image" title="tictactoe">
+            <img src="./images/tictactoe.png" alt="tictactoe" class="job-image" title="tictactoe">
             <p>Tic Tac Toe</p>
             <p>Un juego muy popular que usa como herramientas un lapiz y un papel, lo transformamos 
               a codigo JavaScript nativo en el que participan dos jugadores, además de Css y HTML
@@ -154,54 +151,48 @@
       <div class="containerSkill">
 
         <article class="containerArticle">
-          <img src="/images/html5.png" alt="html5 logo"  title="html5 logo" class="imgArticle">
+          <img src="./images/html5.png" alt="html5 logo"  title="html5 logo" class="imgArticle">
           <p>Maquetación con HTML5.</p>
         </article>
         <article class="containerArticle">
-          <img src="/images/css3.png" alt="html5 logo"  title="html5 logo" class="imgArticle">
+          <img src="./images/css3.png" alt="html5 logo"  title="html5 logo" class="imgArticle">
           <p>Aplicacion de Estilos con CSS3.</p>
         </article>
         <article class="containerArticle">
-          <img src="/images/ES6.png" alt="html5 logo"  title="html5 logo" class="imgArticle">
+          <img src="./images/ES6.png" alt="html5 logo"  title="html5 logo" class="imgArticle">
           <p>Manejo del DOM, codificación de interactividad con Js "ECMA SCRIPT 6".</p>
         </article>
         <article class="containerArticle">
-          <img src="/images/sass.png" alt="sass logo"  title="sass logo" class="imgArticle">
+          <img src="./images/sass.png" alt="sass logo"  title="sass logo" class="imgArticle">
           <p>Manejo de estilos con Sass.</p>
         </article>
         <article class="containerArticle">
-          <img src="/images/react.png" alt="react logo"  title="react logo" class="imgArticle">
+          <img src="./images/react.png" alt="react logo"  title="react logo" class="imgArticle">
           <p>Creacion de componentes Reactivos con React Js.</p>
         </article>
         <article class="containerArticle">
-          <img src="/images/git.png" alt="git logo"  title="git logo" class="imgArticle">
+          <img src="./images/git.png" alt="git logo"  title="git logo" class="imgArticle">
           <p>Control de Versiones con Git y Github.</p>
         </article>
         <article class="containerArticle">
-          <img src="/images/npm.png" alt="npm logo"  title="npm logo" class="imgArticle">
+          <img src="./images/npm.png" alt="npm logo"  title="npm logo" class="imgArticle">
           <p>Manejo de paquetes con NPM.</p>
         </article>
         <article class="containerArticle">
-          <img src="/images/lineadecomandos.png" alt="lineadecomandos logo"  title="lineadecomandos logo" class="imgArticle">
+          <img src="./images/lineadecomandos.png" alt="lineadecomandos logo"  title="lineadecomandos logo" class="imgArticle">
           <p>Manejo de linea de comandos WIN y Linux.</p>
         </article>
         <article class="containerArticle">
-          <img src="/images/ai.png" alt="ai logo"  title="ai logo" class="imgArticle">
+          <img src="./images/ai.png" alt="ai logo"  title="ai logo" class="imgArticle">
           <p>Creacion de logos Vectoriales SVG con Ai.</p>
         </article>
         <article class="containerArticle">
-          <img src="/images/psd.png" alt="psd logo"  title="psd logo" class="imgArticle">
+          <img src="./images/psd.png" alt="psd logo"  title="psd logo" class="imgArticle">
           <p>Edicion de background(Mapa de bits) con Psd.</p>
         </article>
-
-
-
       </div>
     </section>
   </div>
-  
-  
-
-  <script src="/js/index.js"></script>
+  <script src="./js/index.js"></script>
 </body>
 </html>
