se añadio bobton de run app y sus enlaces

--- a/index.html
+++ b/index.html
@@ -108,7 +108,9 @@
             <img src="./images/nigelparadise.png" alt="nigelparadise" class="job-image" title="nigelparadise">
             <p>Landing Page con ReactJs y Sass</p>
             <p>Este es un proyecto de landding Page hecho con React con distintos componentes, donde se resalta el reproductor de audio construido a partir de Hooks, el componente Retail de la derecha recibe la imagen de logo por medio de props y por último el header con algunas animaciones. Tambien tiene Responsive hecho con Sass. </p>
-            <a href="https://github.com/MiguelE8a/landingparadise" class="goToGitHub" target="_blank">Ver más en GitHub</a>
+            <div class="conatinet-Butttons-TrabajosRecientes">
+              <a href="https://github.com/MiguelE8a/landingparadise" class="goToGitHub" target="_blank">ir a GitHub</a>
+            </div>
           </div>
         </article>
 
@@ -118,7 +120,10 @@
             <p>Calculadora</p>
             <p>Este es un pequeño proyecto hecho para mis inicios con logica de programacion, implementando HTML, CSS y Javascript nativos.</p>
           </div>
-          <a href="https://github.com/MiguelE8a/Calculator_01/tree/master" class="goToGitHub" target="_blank">Ver más en GitHub</a>
+          <div class="conatinet-Butttons-TrabajosRecientes">
+            <a href="https://miguele8a.github.io/Calculator_01/" class="goToGitHub" target="_blank">Run App</a>
+            <a href="https://github.com/MiguelE8a/Calculator_01/tree/master" class="goToGitHub" target="_blank">ir a GitHub</a>
+          </div>
         </article>
 
         <article class="article-wrap">
@@ -128,7 +133,9 @@
             <p>Aquí presento mi portafolio como parte de los proyectos que he venido desempeñando,
               este esta construido con marcado HTML, estilos con Sass aplicando animaciones, transformaciones y transiciones, además un poco de JavaScript
               para las interacciones.</p>
-            <a href="/" class="goToGitHub" target="_blank">Ver más en GitHub</a>
+            <div class="conatinet-Butttons-TrabajosRecientes">
+              <a href="/" class="goToGitHub" target="_blank">ir a GitHub</a>
+            </div>
           </div>
         </article>
         
@@ -141,7 +148,10 @@
               como complementos.
             </p>
           </div>
-          <a href="https://github.com/MiguelE8a/TIC-TAC-TOE/tree/master" class="goToGitHub" target="_blank">Ver más en GitHub</a>
+          <div class="conatinet-Butttons-TrabajosRecientes">
+            <a href="https://github.com/MiguelE8a/TIC-TAC-TOE/" class="goToGitHub" target="_blank">Run App</a>
+            <a href="https://github.com/MiguelE8a/TIC-TAC-TOE/tree/master" class="goToGitHub" target="_blank">ir a GitHub</a>
+          </div>
         </article>
       </div>
     </section>
