se añadieron estilos a la barra de scroll del main2 y se añadio atributo title a los botones de trabajos recientes

--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
             <p>Landing Page con ReactJs y Sass</p>
             <p>Este es un proyecto de landding Page hecho con React con distintos componentes, donde se resalta el reproductor de audio construido a partir de Hooks, el componente Retail de la derecha recibe la imagen de logo por medio de props y por último el header con algunas animaciones. Tambien tiene Responsive hecho con Sass. </p>
             <div class="container-Buttons-TrabajosRecientes">
-              <a href="https://github.com/MiguelE8a/landingparadise" class="goToGitHub" target="_blank">ir a GitHub</a>
+              <a href="http://landingparadise.herokuapp.com/" class="goToGitHub" target="_blank" title="go to App">Run App</a>
+              <a href="https://github.com/MiguelE8a/landingparadise" class="goToGitHub" target="_blank" title="go to Github">ir a GitHub</a>
             </div>
           </div>
         </article>
@@ -121,8 +122,8 @@
             <p>Este es un pequeño proyecto hecho para mis inicios con logica de programacion, implementando HTML, CSS y Javascript nativos.</p>
           </div>
           <div class="container-Buttons-TrabajosRecientes">
-            <a href="https://miguele8a.github.io/Calculator_01/" class="goToGitHub" target="_blank">Run App</a>
-            <a href="https://github.com/MiguelE8a/Calculator_01/tree/master" class="goToGitHub" target="_blank">ir a GitHub</a>
+            <a href="https://miguele8a.github.io/Calculator_01/" class="goToGitHub" target="_blank" title="go to App">Run App</a>
+            <a href="https://github.com/MiguelE8a/Calculator_01/tree/master" class="goToGitHub" target="_blank" title="go to Github">ir a GitHub</a>
           </div>
         </article>
 
@@ -134,7 +135,7 @@
               este esta construido con marcado HTML, estilos con Sass aplicando animaciones, transformaciones y transiciones, además un poco de JavaScript
               para las interacciones.</p>
             <div class="container-Buttons-TrabajosRecientes">
-              <a href="/" class="goToGitHub" target="_blank">ir a GitHub</a>
+              <a href="/" class="goToGitHub" target="_blank" title="go to Github">ir a GitHub</a>
             </div>
           </div>
         </article>
@@ -149,8 +150,8 @@
             </p>
           </div>
           <div class="container-Buttons-TrabajosRecientes">
-            <a href="https://miguele8a.github.io/TIC-TAC-TOE/" class="goToGitHub" target="_blank">Run App</a>
-            <a href="https://github.com/MiguelE8a/TIC-TAC-TOE/tree/master" class="goToGitHub" target="_blank">ir a GitHub</a>
+            <a href="https://miguele8a.github.io/TIC-TAC-TOE/" class="goToGitHub" target="_blank" title="go to App">Run App</a>
+            <a href="https://github.com/MiguelE8a/TIC-TAC-TOE/tree/master" class="goToGitHub" target="_blank" title="go to Github">ir a GitHub</a>
           </div>
         </article>
       </div>
