se añadio y corrijio etiquetas en el nuevo componente CRONOMETRO

--- a/index.html
+++ b/index.html
@@ -146,26 +146,27 @@
             <p>Tic Tac Toe</p>
             <p>Un juego muy popular que usa como herramientas un lapiz y un papel, lo transformamos
               a codigo JavaScript nativo en el que participan dos jugadores, además de Css y HTML
-              como complementos.
-            </p>
+              como complementos.</p>
+            <div class="container-Buttons-TrabajosRecientes">
+              <a href="https://miguele8a.github.io/TIC-TAC-TOE/" class="goToGitHub" target="_blank" title="go to App">Run App</a>
+              <a href="https://github.com/MiguelE8a/TIC-TAC-TOE/tree/master" class="goToGitHub" target="_blank" title="go to Github">ir a GitHub</a>
+            </div>
           </div>
-          <div class="container-Buttons-TrabajosRecientes">
-            <a href="https://miguele8a.github.io/TIC-TAC-TOE/" class="goToGitHub" target="_blank" title="go to App">Run App</a>
-            <a href="https://github.com/MiguelE8a/TIC-TAC-TOE/tree/master" class="goToGitHub" target="_blank" title="go to Github">ir a GitHub</a>
-          </div>
+        </article>
 
         <article class="article-wrap">
           <div class="contain-article">
             <img src="./images/cronometro.png" alt="tictactoe" class="job-image" title="cronometro">
-            <p>Cronometro</p>
-            <p>En proceso de construccion
-            </p>
-          </div>
-          <div class="container-Buttons-TrabajosRecientes">
-            <a href="https://github.com/MiguelE8a/Cronometer01" class="goToGitHub" target="_blank" title="go to App">Run App</a>
-            <a href="https://miguele8a.github.io/Cronometer01/" class="goToGitHub" target="_blank" title="go to Github">ir a GitHub</a>
+            <p>Tic Tac Toe</p>
+            <p>En proceso.</p>
+            <div class="container-Buttons-TrabajosRecientes">
+              <a href="https://github.com/MiguelE8a/Cronometer01" class="goToGitHub" target="_blank" title="go to App">Run App</a>
+              <a href="https://miguele8a.github.io/Cronometer01/" class="goToGitHub" target="_blank" title="go to Github">ir a GitHub</a>
+            </div>
           </div>
         </article>
+
+        
       </div>
     </section>
 
