se añadio boton de encendido y apagado

--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
             <p>Tic Tac Toe</p>
             <p>En proceso.</p>
             <div class="container-Buttons-TrabajosRecientes">
-              <a href="https://github.com/MiguelE8a/Cronometer01" class="goToGitHub" target="_blank" title="go to App">Run App</a>
-              <a href="https://miguele8a.github.io/Cronometer01/" class="goToGitHub" target="_blank" title="go to Github">ir a GitHub</a>
+              <a href="https://miguele8a.github.io/Cronometer01/" class="goToGitHub" target="_blank" title="go to App">Run App</a>
+              <a href="https://github.com/MiguelE8a/Cronometer01" class="goToGitHub" target="_blank" title="go to Github">ir a GitHub</a>
             </div>
           </div>
         </article>
