se corrigio descripcion de componente cronometro

--- a/index.html
+++ b/index.html
@@ -158,7 +158,8 @@
           <div class="contain-article">
             <img src="./images/cronometro.png" alt="tictactoe" class="job-image" title="cronometro">
             <p>Tic Tac Toe</p>
-            <p>En proceso.</p>
+            <p>Esta es una aplicacion hecha con HTML, Sass y JavaScript Vanilla.
+              Es un Reloj Temporizador. Nos permite ver la Hora Actual y puede ser usado como cronometro. Tambien podemos alamacenar en tiempo real el tiempo trasncurrido en el cronometro, esto mismo nos muestra en la columna derecha la hora exacta en la que se presiona el boton de guardar tiempo de vuelta.</p>
             <div class="container-Buttons-TrabajosRecientes">
               <a href="https://miguele8a.github.io/Cronometer01/" class="goToGitHub" target="_blank" title="go to App">Run App</a>
               <a href="https://github.com/MiguelE8a/Cronometer01" class="goToGitHub" target="_blank" title="go to Github">ir a GitHub</a>
