--- a/index.html
+++ b/index.html
@@ -156,13 +156,25 @@
 
         <article class="article-wrap">
           <div class="contain-article">
-            <img src="./images/cronometro.png" alt="tictactoe" class="job-image" title="cronometro">
+            <img src="./images/cronometro.png" alt="cronometro" class="job-image" title="cronometro">
             <p>Tic Tac Toe</p>
             <p>Esta es una aplicacion hecha con HTML, Sass y JavaScript Vanilla.
               Es un Reloj Temporizador. Nos permite ver la Hora Actual y puede ser usado como cronometro. Tambien podemos alamacenar en tiempo real el tiempo trasncurrido en el cronometro, esto mismo nos muestra en la columna derecha la hora exacta en la que se presiona el boton de guardar tiempo de vuelta.</p>
             <div class="container-Buttons-TrabajosRecientes">
               <a href="https://miguele8a.github.io/Cronometer01/" class="goToGitHub" target="_blank" title="go to App">Run App</a>
               <a href="https://github.com/MiguelE8a/Cronometer01" class="goToGitHub" target="_blank" title="go to Github">ir a GitHub</a>
+            </div>
+          </div>
+        </article>
+        
+        <article class="article-wrap">
+          <div class="contain-article">
+            <img src="./images/flechaCanvas.png" alt="flechaCanvas" class="job-image" title="flechaCanvas">
+            <p>Arrows Canvas</p>
+            <p>En este pequeño proyecto a través de la etiqueta "Canvas" y obteniendo el contexto "2d" realizamos un lienzo en el que se puede trazar lineas en los ejes "X" y "Y", a su vez con u input tipo rango podemos elegir el grosor de la linea y con un input tipo color podemos elegir el color del trazo. Todo esto lo logramos presionando en el teclado las telcas de direccion o en pantalla los botones con flechas.</p>
+            <div class="container-Buttons-TrabajosRecientes">
+              <a href="https://miguele8a.github.io/SNAKE/" class="goToGitHub" target="_blank" title="go to App">Run App</a>
+              <a href="https://github.com/MiguelE8a/SNAKE" class="goToGitHub" target="_blank" title="go to Github">ir a GitHub</a>
             </div>
           </div>
         </article>
