se corrigio URL del componente FLECHA_TECLADO

--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
             <p>Arrows Canvas</p>
             <p>En este pequeño proyecto a través de la etiqueta "Canvas" y obteniendo el contexto "2d" realizamos un lienzo en el que se puede trazar lineas en los ejes "X" y "Y", a su vez con u input tipo rango podemos elegir el grosor de la linea y con un input tipo color podemos elegir el color del trazo. Todo esto lo logramos presionando en el teclado las telcas de direccion o en pantalla los botones con flechas.</p>
             <div class="container-Buttons-TrabajosRecientes">
-              <a href="https://miguele8a.github.io/SNAKE/" class="goToGitHub" target="_blank" title="go to App">Run App</a>
-              <a href="https://github.com/MiguelE8a/SNAKE" class="goToGitHub" target="_blank" title="go to Github">ir a GitHub</a>
+              <a href="https://miguele8a.github.io/FLECHAS_TECLADO/" class="goToGitHub" target="_blank" title="go to App">Run App</a>
+              <a href="https://github.com/MiguelE8a/FLECHAS_TECLADO" class="goToGitHub" target="_blank" title="go to Github">ir a GitHub</a>
             </div>
           </div>
         </article>
