--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/styles.css">
   <title>Portfolio - Miguel E. Ochoa</title>
+
+  <meta name="theme-color" content="#F0DB4F">
+  <meta name="MobileOptimized" content="width">
+  <meta name="HandheldFriendly" content="true">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <!-- <link rel="shortcut icon" type="image/png" href="./img/ProgramadorFitness.png">
+  <link rel="apple-touch-icon" href="./ProgramadorFitness.png">
+  <link rel="apple-touch-startup-image" href="./ProgramadorFitness.png"> -->
+  <link rel="manifest" href="./manifest.json">
+
 </head>
 <body>
   <div class="main01">
