--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- <link rel="shortcut icon" type="image/png" href="./img/ProgramadorFitness.png">
   <link rel="apple-touch-icon" href="./ProgramadorFitness.png">
   <link rel="apple-touch-startup-image" href="./ProgramadorFitness.png"> -->
-  <link rel="manifest" href="./manifest.json">
+  <!-- <link rel="manifest" href="./manifest.json"> -->
 
 </head>
 <body>
